# platform.core.api.context

./: AUTHORS  CMakeLists.txt  LICENSE
doc/: context_history_doc.h  context_trigger_doc.h
include/: context_history.h  context_history_types_internal.h  context_internal.h  context_places.h  context_places_internal.h  context_places_types_internal.h  context_trigger.h  context_trigger_internal.h  context_trigger_types_internal.h
internal/: CMakeLists.txt  context_internal.cpp
packaging/: context.spec
src/: DBusClient.cpp  DBusClient.h  IDBusClientListener.h  context_history.cpp  context_places.cpp  context_trigger.cpp  priv_util.cpp  priv_util.h  request_handler.cpp  request_handler.h  rule_info.h  rule_validator.cpp  rule_validator.h
test/: CMakeLists.txt
test/src/: main.c  utc_context_history.c  utc_context_history.h  utc_context_trigger.c  utc_context_trigger.h
testsuite/: CMakeLists.txt  context-test.manifest
testsuite/src/: main.cpp  shared.cpp  shared.h
testsuite/src/history/: history.cpp  history.h
testsuite/src/trigger/: condition.cpp  condition.h  event.cpp  event.h  request_handler.cpp
