CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(context-test)
SET(EXEC context-test)

# Source List
FILE(GLOB_RECURSE UTC_SRCS src/*.c)
MESSAGE("UTC Sources: ${UTC_SRCS}")

INCLUDE_DIRECTORIES(
	/usr/include
	/usr/include/glib-2.0
	${CMAKE_SOURCE_DIR}/include
)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	dlog
	glib-2.0
	capi-base-common
	capi-appfw-app-control
)

SET(EXTRA_CFLAGS -fPIE)
FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

# for Emulator
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
ELSE("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DEMULATOR")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_EXECUTABLE(${EXEC} ${UTC_SRCS})
TARGET_LINK_LIBRARIES(${EXEC} ${pkgs_LDFLAGS} ${target} -pie)
SET_TARGET_PROPERTIES(${EXEC} PROPERTIES COMPILE_FLAGS ${EXTRA_CFLAGS})
SET_TARGET_PROPERTIES(${EXEC} PROPERTIES COMPILE_DEFINITIONS "LOG_TAG=\"CONTEXT-TEST\"")

INSTALL(TARGETS ${EXEC} DESTINATION /usr/bin)
