CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(context-test)
SET(TEST_EXEC context-test)

# Source List
FILE(GLOB_RECURSE TEST_SRCS src/*.cpp)
SET(TEST_SRCS ${TEST_SRCS} ../src/DBusClient.cpp)
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
)

ADD_EXECUTABLE(${TEST_EXEC} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(${TEST_EXEC} ${api_pkg_LDFLAGS} ${target} -pie)
SET_TARGET_PROPERTIES(${TEST_EXEC} PROPERTIES COMPILE_FLAGS ${API_EXTRA_CFLAGS})
SET_TARGET_PROPERTIES(${TEST_EXEC} PROPERTIES COMPILE_DEFINITIONS "LOG_TAG=\"CONTEXT-TEST\"")

INSTALL(TARGETS ${TEST_EXEC} DESTINATION ${CMAKE_INSTALL_BINDIR})
